--- a/style.css
+++ b/style.css
@@ -89,6 +89,7 @@ input[type="number"]{
     background-color: var(--background);
     color: var(--color);
     cursor: var(--cursor-def), auto;
+    user-select: none;
 }
 .inner{
     position: absolute;
