--- a/style.css
+++ b/style.css
@@ -24,6 +24,16 @@
     outline: none !important;
     padding: 5px;
 }
+.cs-url{
+    color: #00ff00;
+}
+.cs-url:hover{
+    color: var(--light);
+}
+
+.cs-url:visited{
+    color: #bc35ff;
+}
 .cs-btn{
     background-color: var(--background);
     border: var(--border-size) var(--border-type) var(--border-color);
@@ -62,7 +72,7 @@ input[type="number"]{
 /*  */
 ::-webkit-scrollbar {
     height: 0px;
-    width: 7px;
+    width: 6px;
 }
 ::-webkit-scrollbar-track {
     background: #434343;
@@ -90,7 +100,6 @@ input[type="number"]{
     background-color: var(--background);
     color: var(--color);
     cursor: var(--cursor-def), auto;
-    user-select: none;
 }
 .inner{
     position: absolute;
@@ -112,7 +121,7 @@ input[type="number"]{
 }
 .top-select{
     position: relative;
-    padding: 0px 5px 0px 5px;
+    padding: 0px 7px 0px 7px;
     font-size: 1.3em;
     cursor: var(--cursor-poi), pointer;
 }
@@ -159,7 +168,7 @@ input[type="number"]{
 div#load-all {
     position: relative;
     max-width: 50%;
-    font-size: 1.4em;
+    font-size: 2.4em;
     text-align: center;
     margin-top: 5px;
 }
@@ -311,6 +320,27 @@ div#load-all {
     width: 100%;
     border-top: var(--border-size) var(--border-type) var(--border-color);
     user-select: none;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.bottom-right, .bottom-left {
+    position: relative;
+    width: 50%;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+}
+.bottom-right{
+    flex-direction: row-reverse;
+}
+.bottom-item {
+    position: relative;
+    height: 100%;
+    min-width: 50px;
+    padding: 0px 2px 0px 2px;
+    margin: 0px 3px 0px 3px;
+    font-size: 1.4em;
 }
 
 
@@ -468,7 +498,7 @@ input.input-mesh-option {
 }
 .log-content{
     position: relative;
-    width: 100%;
+    width: fit-content;
     height: 100%;
 }
 .log-message{
