--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/*
-chaos css :/
-*/
 :root{
     --background: #000;
     --color: #fff;
@@ -8,7 +5,7 @@ chaos css :/
     --top-bar: 25px;
     --bottom-bar: 25px;
     --left-menu: 27%;
-    --right-menu: 22%;
+    --right-menu: 23%;
     --border-size: 2px;
     --border-color: #ddd;
     --border-type: solid;
@@ -26,6 +23,42 @@ chaos css :/
     border: var(--border-size) var(--border-type) var(--border-color) !important;
     outline: none !important;
     padding: 5px;
+}
+input.cs-input[type=range]{
+    appearance: none;
+    color: transparent;
+    background-color: transparent;
+    background-image: url(/img/bgi-2.png);
+    background-size: cover;
+    background-position: left;
+    margin: 13px 1px;
+}
+input.cs-input[type=range]::-webkit-slider-thumb {
+    border-radius: 0px !important;
+    background-color: #00ffff !important;
+    color: #00ffff;
+    width: 10px;
+    height: 30px;
+    -webkit-appearance: none;
+    margin-top: -14px;
+    /* border: 1px solid #000000;
+    box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d; */
+}
+input.cs-input[type=range]:focus{
+    outline: none;
+}
+input[type=file]{
+    outline: none;
+    color: var(--color);
+    border: var(--border-size) solid var(--border-color);
+    cursor: var(--cursor-poi), pointer;
+
+}
+input.cs-input[type=range]::-webkit-slider-runnable-track {
+    background: transparent;
+    color: transparent;
+    width: 100%;
+    height: 8.4px;
 }
 .cs-url{
     color: #00ff00;
@@ -47,6 +80,8 @@ chaos css :/
     white-space: nowrap;
     overflow: hidden;
     text-align: center;
+    width: fit-content;
+    padding: 2px 6px;
 }
 .cs-btn:hover{
     border: var(--border-size) var(--border-type) var(--light);
@@ -170,7 +205,7 @@ input[type="number"]{
 }
 div#load-all {
     position: relative;
-    max-width: 90%;
+    max-width: 50%;
     font-size: 2.4em;
     text-align: center;
     margin-top: 5px;
@@ -395,6 +430,10 @@ div#load-all {
     max-height: 500px;
     overflow-y: scroll;
 }
+.mesh-option.-no-scroll- > .mesh-value{
+    max-height: none;
+    overflow: hidden;
+}
 .material-item {
     position: relative;
     height: 25px;
@@ -468,6 +507,32 @@ input.input-mesh-option {
     outline: unset !important;
     border: var(--border-size) var(--border-type) var(--border-color);
     width: calc(30% - 20px);
+}
+input.inp-checkbox {
+    background-color: black;
+    width: 20px;
+    height: 20px;
+}
+label.label-inp {
+    font-size: 1.4em;
+    margin: 2px;
+}
+.morph-list {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.morph-box {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    position: relative;
+    width: 50%;
+}
+.morph-box.big {
+    width: 100%;
 }
 .tit{
     font-size: 1.2em;
